@@ -20,7 +20,7 @@ class JediTaskSpec(object):
         'reqID','oldStatus','cloud','site','countryGroup','parent_tid',
         'eventService','ticketID','ticketSystemType','stateChangeTime',
         'superStatus','campaign','mergeRamCount','mergeRamUnit',
-        'mergeWalltime','mergeWalltimeUnit'
+        'mergeWalltime','mergeWalltimeUnit','throttledTime','numThrottled'
         )
     # attributes which have 0 by default
     _zeroAttrs = ()
